<resources>
    <string name="app_name">MachiKoroPad</string>
    <string name="app_about">About MachiKoroPad:
        \nUse MachiKoroPad while playing the real-world board/card game \'Machi Koro\' with friends.
        On each turn, just enter your dice roll result.
        The app produces statistics as bar charts for you to inspect.
        Discuss your strategy with all players - during or after playing!
        \n
        \nBoardgame forum:
        \nsee https://boardgamegeek.com/article/23991095
        \n
        \nAuthor: thilo20
        \ncontact me via machikoro@e.mail.de
        \n
        \nCopyright and Disclaimer:
        \nsee https://github.com/thilo20/MachiKoroPad
    </string>
    <string name="title_activity_stats">Statistics</string>
    <string name="action_settings">dummy</string>
    <string name="section_format">Dice rolls by: %1$s \n\n%2$s</string>
    <string name="select_language">Select language:</string>
    <string name="select_english">English</string>
    <string name="select_german">German</string>
    <string name="new_game">New game</string>
    <string name="continue_game">Continue Game</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="test">Test EN</string>
    <string name="dice_image">dice</string>
    <string name="enter_player_names">Enter player names:</string>
    <string name="num_players">Players</string>
    <string name="all_players">all players</string>
    <string name="rules">Rules</string>
    <string name="rule_harbour">with Harbour extension</string>
    <string name="start">START</string>
    <string name="roll_dice">%1$s rolls</string>
    <string name="toggle_double_roll">use two dice</string>
    <string name="amusement_park">A.Park</string>
    <string name="harbour">Harbour</string>
    <string name="toggle_single_roll">use one dice</string>
    <string name="stats_overall">Game progress: Round %1$d, Turn %2$d\n</string>
    <string name="use_harbour">Use Harbour?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="amusementpark">Amusement Park!</string>
    <string name="amusementpark_message">You rolled doublets: Extra turn!</string>
    <string name="nice">Nice</string>
    <string name="game_exists">A game is in progress. Do you want to dismiss it?</string>
    <string name="stats_chart_legend_single">single: %1$d</string>
    <string name="stats_chart_legend_double">double: %1$d</string>
    <string name="stats_chart_legend"># of rolls</string>
</resources>
