<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thilo20.machikoropad.SettingsActivity">

    <TextView
        android:text="@string/select_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:text="@string/select_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbLanguageEn"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/select_german"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbLanguageDe"
            android:layout_weight="1" />
    </RadioGroup>
</LinearLayout>
